--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -164,3 +164,13 @@
     scrollbar-width: none; 
   }
 }
+
+/* styles/globals.css */
+.hide-scrollbar {
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;  /* Safari and Chrome */
+}
